[package]
name = "torchbearer"
version = "0.6.0"
authors = ["Redwarp <redwarp@gmail.com>"]
edition = "2021"
description = "Find your path in darkerer dungeons."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/redwarp/torchbearer"
categories = ["game-development"]
keywords = ["gamedev", "pathfinding", "field-of-view"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[dev-dependencies]
bracket-pathfinding = "0.8"
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8"
tcod = "0.15"

[[bench]]
name = "fov"
harness = false

[[bench]]
name = "path"
harness = false

[[bench]]
name = "bresenham"
harness = false

[workspace]
members = ["example"]
resolver = "2"
