[package]
name = "torchbearer"
version = "0.6.1"
authors = ["Redwarp <redwarp@gmail.com>"]
edition = "2024"
description = "Find your path in darkerer dungeons."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/redwarp/torchbearer"
categories = ["game-development"]
keywords = ["gamedev", "pathfinding", "field-of-view"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Optional, only used by benchmarks for comparison. Enable with `--features tcod`.
# Kept optional because libtcod's bundled C sources fail to build on some toolchains/SDKs.
tcod = { version = "0.15", optional = true }

[dev-dependencies]
bracket-pathfinding = "0.8"
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8"

[features]
# Include the `tcod` comparison in benchmarks.
tcod = ["dep:tcod"]

[[bench]]
name = "fov"
harness = false

[[bench]]
name = "path"
harness = false

[[bench]]
name = "bresenham"
harness = false

[workspace]
members = ["example"]
resolver = "2"
