[workspace]
members = [
    "torchbearer",
    "example",
    "benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.6.1"
authors = ["Redwarp <redwarp@gmail.com>"]
edition = "2024"
description = "Find your path in darkerer dungeons."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/redwarp/torchbearer"
categories = ["game-development"]
keywords = ["gamedev", "pathfinding", "field-of-view"]
