[package]
name = "torchbearer_benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
torchbearer = { path = "../torchbearer" }
tcod = { version = "0.15", optional = true }

[dev-dependencies]
bracket-pathfinding = "0.8.7"
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = "0.10.1"

[features]
tcod = ["dep:tcod"]

[[bench]]
name = "fov"
harness = false

[[bench]]
name = "path"
harness = false

[[bench]]
name = "bresenham"
harness = false
