[package]
name = "torchbearer_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pixels = "0.11"
find_folder = "0.3"
winit = "0.27"
winit_input_helper = "0.13"
env_logger = "0.10"
log = "0.4"
tiny-skia = "0.8"
torchbearer = { path = ".." }
