[package]
name = "torchbearer_example"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
pixels = "0.17.1"
find_folder = "0.3.0"
winit = "0.30.13"
winit_input_helper = "0.17.0"
env_logger = "0.11.10"
log = "0.4.32"
tiny-skia = "0.12.0"
torchbearer = { path = "../torchbearer" }
